manifests/multiclustermonitoring/base/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    icp.management.ibm.com/rewrite-target: "/"
    kubernetes.io/ingress.class: "ibm-icp-management"
    icp.management.ibm.com/configuration-snippet: |
      rewrite_by_lua_block {
        ngx.req.set_header("Authorization", "Basic cm9vdDpzZWNyZXQ=")
      }
  name: grafana
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 3000
        path: /grafana
